# fff-cli

./: Cargo.toml  README.md  bench.sh  build.rs
src/: cli.rs  error.rs  main.rs
src/commands/: filter.rs  grep.rs  index.rs  mod.rs  search.rs  watch.rs
src/index/: format.rs  mod.rs  staleness.rs
src/output/: human.rs  json.rs  mod.rs
tests/: integration.rs
