[package]
name = "fff-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fast file finder and grep — standalone CLI"

[[bin]]
name = "fff"
path = "src/main.rs"

[features]
default = []
zlob = ["fff/zlob"]

[dependencies]
fff = { package = "fff-search", git = "https://github.com/dmtrKovalenko/fff.nvim.git", default-features = false }
fff-query-parser = { git = "https://github.com/dmtrKovalenko/fff.nvim.git", default-features = false }

mimalloc = "0.1.47"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.8.2"
memmap2 = "0.9"
git2 = { version = "0.20.2", default-features = false, features = ["vendored-libgit2"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3.4.2"
dirs = "5.0"
thiserror = "2.0.10"
crossterm = "0.28"
neo_frizbee = { version = "0.8.5", features = ["match_end_col"] }

[dev-dependencies]
tempfile = "3.8"
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
